--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ services:
 before_install:
   - docker-compose up -d
 script:
-  - sleep 100
+  - sleep 60
   - docker exec -it pg-gh-postgis python3 /python-libs/test_graphhopper.py
+  - docker exec -it pg-gh-postgis psql -U postgres -c 'SELECT * FROM graphhopper.pointlist(52.553811, 13.371048, 60) LIMIT 5'
+  - docker exec -it pg-gh-postgis psql -U postgres -c 'SELECT time, distance FROM graphhopper.route(52.553811, 13.371048, 52.526248,13.368301)'
 
