--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ script:
   - docker exec -it pg-gh-postgis psql -U postgres -c 'SELECT * FROM graphhopper.pointlist(52.553811, 13.371048, 60) LIMIT 5'
   - docker exec -it pg-gh-postgis psql -U postgres -c 'SELECT time, distance FROM graphhopper.route(52.553811, 13.371048, 52.526248,13.368301)'
   - docker exec -it pg-gh-postgis psql -U postgres -c "SELECT start_id, end_id, time FROM graphhopper.route_matrix('graphhopper.points_berlin') LIMIT 14"
+  - docker exec -it pg-gh-postgis psql -U postgres -f /examples/route-matrix.sql
 
