--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 services:
   - docker
 before_install:
-  - docker-compose up -d
+  - docker-compose up -d --build
 script:
-  - sleep 60
+  - sleep 40
   - docker exec -it pg-gh-postgis python3 /python-libs/test_graphhopper.py
   - docker exec -it pg-gh-postgis psql -U postgres -c 'SELECT * FROM graphhopper.pointlist(52.553811, 13.371048, 60) LIMIT 5'
   - docker exec -it pg-gh-postgis psql -U postgres -c 'SELECT time, distance FROM graphhopper.route(52.553811, 13.371048, 52.526248,13.368301)'
   - docker exec -it pg-gh-postgis psql -U postgres -c "SELECT start_id, end_id, time FROM graphhopper.route_matrix('graphhopper.points_berlin') LIMIT 14"
   - docker exec -it pg-gh-postgis psql -U postgres -f /examples/route-matrix.sql
-  - docker exec -it pg-gh-postgis psql -U postgres -c "SELECT h3_geo_to_h3(geom, 7) AS h3_index FROM graphhopper.points_berlin"
+  - docker exec -it pg-gh-postgis psql -U postgres -c 'SELECT h3_geo_to_h3(geom, 7) AS h3_index FROM graphhopper.points_berlin'
+  - docker exec -it pg-gh-postgis psql -U postgres -c 'SELECT h3_index, time, distance FROM graphhopper.h3_hexagons(52.514549, 13.394394, 9) LIMIT 5'
 
